# command-cli

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
docs/: policy-lock-spec.md  setup-existing-circuit-breakers.md  setup-fresh-machine.md
main/: install.sh
src/: cli.rs  component.rs  error.rs  lib.rs  main.rs
src/api/: account.rs  mod.rs  policy.rs  provenance.rs
src/broker/: file.rs  mod.rs  scoped.rs
src/commands/: account.rs  auth.rs  gateway.rs  guard.rs  mcp.rs  mod.rs  mode.rs  plugin.rs  policy.rs  provenance.rs  setup.rs  status.rs
src/config/: atomic.rs  creds.rs  mod.rs  token_store.rs
src/oauth/: device.rs  discovery.rs  loopback.rs  mod.rs  pkce.rs  tokens.rs
src/policy/: canonical.rs  mod.rs
src/services/: child.rs  gateway_bin.rs  guard_bin.rs  guard_http.rs  host.rs  installer.rs  mod.rs  signing_keys.rs  updater.rs
tests/: cli_contract.rs
